--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -5,6 +5,7 @@ export const prerender = true
 ---
 
 <header class="sticky top--100px z-99 px-2em">
+  <script src="https://www.gptbots.ai/widget/eed19hnhdtdi7uaz8qle3as/chat.js" async></script>
   <div class="w-100px h-100px logo">
     <Logo />
   </div>
